--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Donors Choose Viz</title>
-  <link rel="stylesheet" href="./static/lib/css//bootstrap.min.css">
-  <link rel="stylesheet" href="./static/lib/css/keen-dashboards.css">
-  <link rel="stylesheet" href="./static/lib/css/dc.css">
-  <link rel="stylesheet" href="./static/css/custom.css">
+  <link rel="stylesheet" href="./static/DonorsChoose/static/lib/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./static/DonorsChoose/static/lib/css/keen-dashboards.css">
+  <link rel="stylesheet" href="./static/DonorsChoose/static/lib/css/dc.css">
+  <link rel="stylesheet" href="./static/DonorsChoose/static/css/custom.css">
 
 
 </head>
@@ -18,7 +18,11 @@
       </div>
     </div>
   </div>
+  <div class="well" style="background:white">
+    <p><b><a href="https://www.donorschoose.org/">DonorsChoose.org</a></b> is a United States–based <b>nonprofit organization</b> founded in 2000, that allows individuals to donate directly to public school classroom projects. DonorsChoose.org enables teachers to request materials and resources for their classrooms and makes these project requests available to individual donors through its website. Donors can give $1 or more to projects that interest them, which are searchable by school name, teacher name, location, school subject, material, and keywords. DonorsChoose.org then purchases necessary supplies and ships them directly to the schools. It was among the <b>first civic crowdfunding platforms</b> of its kind and has been given <b>Charity Navigator’s</b> highest rating every year since 2005.
 
+    <p>The organisation has open-sourced the donation data and we aim to study the data in brief by visualising its' noteworthy characteristics. We developed a quick dashboard using <b>Flask</b> and <b>D3.js</b>, the code for which is available <a href="https://github.com/darshanbagul/DonorsChoose">here</a>.
+  </div>
   <div class="container-fluid">
 
     <div class="row">
@@ -116,15 +120,15 @@
 
   </div>
 
-  <script src="./static/lib/js/jquery.min.js"></script>
-  <script src="./static/lib/js/bootstrap.min.js"></script>
-  <script src="./static/lib/js/crossfilter.js"></script>
-  <script src="./static/lib/js/d3.js"></script>
-  <script src="./static/lib/js/dc.js"></script>
-  <script src="./static/lib/js/queue.js"></script>
+  <script src="./static/DonorsChoose/static/lib/js/jquery.min.js"></script>
+  <script src="./static/DonorsChoose/static/lib/js/bootstrap.min.js"></script>
+  <script src="./static/DonorsChoose/static/lib/js/crossfilter.js"></script>
+  <script src="./static/DonorsChoose/static/lib/js/d3.js"></script>
+  <script src="./static/DonorsChoose/static/lib/js/dc.js"></script>
+  <script src="./static/DonorsChoose/static/lib/js/queue.js"></script>
 
 
-  <script src="./static/lib/js/keen.min.js"></script>
-  <script src='./static/js/graphs.js' type='text/javascript'></script>
+  <script src="./static/DonorsChoose/static/lib/js/keen.min.js"></script>
+  <script src='./static/DonorsChoose/static/js/graphs.js' type='text/javascript'></script>
 </body>
 </html>
